final final final commit

--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
         <h3 class="footer_h3">Bangladesh 2.0</h3>
         <hr>
         <div class="footer_icon">
-            <img src="/assets/facebook.png" alt="facebook">
-            <img src="/assets/instagram.png" alt="instagram">
-            <img src="/assets/x.png" alt="x">
+            <img src="assets/facebook.png" alt="facebook">
+            <img src="assets/instagram.png" alt="instagram">
+            <img src="assets/x.png" alt="x">
         </div>
     </footer>
 </body> 
